hydroflow_plus_test_local/src/local/snapshots/hydroflow_plus_test_local__local__negation__tests__anti_join_static_tick@graphvis_mermaid.snap
---
source: hydroflow_plus_test_local/src/local/negation.rs
expression: "flow.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"<div style=text-align:center>(1v1)</div> <code>source_iter({<br>    use crate::__staged::local::negation::*;<br>    0..5<br>})</code>"/]:::pullClass
2v1[\"<div style=text-align:center>(2v1)</div> <code>map(<br>    stageleft::runtime_support::fn1_type_hint::&lt;<br>        u32,<br>        (u32, u32),<br>    &gt;({<br>        use crate::__staged::local::negation::*;<br>        |v| (v, v)<br>    }),<br>)</code>"/]:::pullClass
3v1[\"(3v1) <code>persist::&lt;'static&gt;()</code>"/]:::pullClass
4v1[\"<div style=text-align:center>(4v1)</div> <code>source_iter({<br>    use crate::__staged::local::negation::*;<br>    3..6<br>})</code>"/]:::pullClass
5v1[\"(5v1) <code>anti_join_multiset::&lt;'tick, 'tick&gt;()</code>"/]:::pullClass
6v1[/"<div style=text-align:center>(6v1)</div> <code>for_each(<br>    stageleft::runtime_support::fn1_type_hint::&lt;<br>        (u32, u32),<br>        (),<br>    &gt;({<br>        use crate::__staged::local::negation::*;<br>        let output = output;<br>        |v| {<br>            output.send(v.0).unwrap();<br>        }<br>    }),<br>)</code>"\]:::pushClass
7v1["(7v1) <code>handoff</code>"]:::otherClass
1v1-->2v1
2v1-->3v1
3v1-->|pos|5v1
4v1-->7v1
5v1-->6v1
7v1--x|neg|5v1; linkStyle 5 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    4v1
    subgraph sg_1v1_var_stream_3 ["var <tt>stream_3</tt>"]
        4v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    1v1
    2v1
    3v1
    5v1
    6v1
    subgraph sg_2v1_var_stream_0 ["var <tt>stream_0</tt>"]
        1v1
    end
    subgraph sg_2v1_var_stream_1 ["var <tt>stream_1</tt>"]
        2v1
    end
    subgraph sg_2v1_var_stream_2 ["var <tt>stream_2</tt>"]
        3v1
    end
    subgraph sg_2v1_var_stream_4 ["var <tt>stream_4</tt>"]
        5v1
    end
end
